@@ -3,7 +3,9 @@ DynamicReports Change Log
 
 Changes in version 1.3.0
 ---------------------------------------------------
-- barcode support
+- barcode support, see ShippingLabel for an example
+  supported barcodes - codabar, code128, ean128, dataMatrix, code39, interleaved2Of5, upca,
+                       upce, ean13, ean8, uspsIntelligentMail, royalMailCustomer, postnet, pdf417
 
 Changes in version 1.2.0 (2010-06-29)
 ---------------------------------------------------
